# export-browser-bookmarks-cli

./: Cargo.toml  README.md
src/: browser_path.rs  main.rs  read.rs
