[package]
name = "export_bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.23.2"
dirs = "4.0.0"
serde_json = "1.0.79"
dialoguer = "0.10.0"
console = "0.15.0"
lazy_static = "1.4.0"
csv = "1.1.6"
